more converter madness