@@ -6,9 +6,7 @@ import com.hitchhikerprod.league.beans.LeagueDivision;
 import com.hitchhikerprod.league.beans.LeagueGameData;
 import com.hitchhikerprod.league.beans.LeagueMatchDay;
 import com.hitchhikerprod.league.beans.LeagueTeamData;
-import com.hitchhikerprod.league.beans.RawGame;
 import com.hitchhikerprod.league.beans.RawLeagueData;
-import com.hitchhikerprod.league.beans.RawMatchDay;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -33,8 +31,9 @@ public class AFL2025 implements League {
                 .collect(Collectors.toMap(AFLTeamData::getId, t -> t));
 
         final List<AFLMatchDay> matchDays = leagueData.matchdays.stream().map(md -> {
-            final AFLMatchDay matchDay = new AFLMatchDay(md.getName());
             final GameRawConverter rawConverter = new GameRawConverter(teams);
+
+            final AFLMatchDay matchDay = new AFLMatchDay(md.getName());
             final List<AFLGameData> gameData = md.getGames().stream().map(rawConverter::convert).toList();
             matchDay.setGames(gameData);
             matchDay.setComplete(gameData.stream().allMatch(AFLGameData::isComplete));
@@ -46,23 +45,13 @@ public class AFL2025 implements League {
 
     @Override
     public RawLeagueData export() {
+        final MatchDayToRawConverter matchDayConverter = new MatchDayToRawConverter();
+
         final RawLeagueData doc = new RawLeagueData();
         doc.league = this.leagueData.league;
         doc.teams = this.leagueData.teams;
         doc.divisions = this.leagueData.divisions;
-        doc.matchdays = this.matchDays.stream().map(md -> {
-            final RawMatchDay matchDay = new RawMatchDay();
-            matchDay.setName(md.getName());
-            matchDay.setGames(md.games.stream().map(g -> {
-                final RawGame game = new RawGame();
-                game.awayTeam = g.getAwayTeam().getId();
-                game.awayScore = Map.of("goals", g.getAwayGoals(), "behinds", g.getAwayBehinds());
-                game.homeTeam = g.getHomeTeam().getId();
-                game.homeScore = Map.of("goals", g.getHomeGoals(), "behinds", g.getHomeBehinds());
-                return game;
-            }).collect(Collectors.toList()));
-            return matchDay;
-        }).toList();
+        doc.matchdays = this.matchDays.stream().map(matchDayConverter::convert).collect(Collectors.toList());
         return doc;
     }
 
